# pe-rust

./: LICENSE  README.md
002-even-fibonacci-numbers/: Cargo.toml
005-smallest-multiple/: Cargo.toml
007-10001st-prime/: Cargo.toml
008-largest-product-in-a-series/: Cargo.toml
009-special-pythagorean-triplet/: Cargo.toml
010-summation-of-primes/: Cargo.toml
011-largest-product-in-a-grid/: Cargo.toml
012-highly-divisible-triangular-number/: Cargo.toml
013-large-sum/: Cargo.toml
014-longest-collatz-sequence/: Cargo.toml
015-lattice-paths/: Cargo.toml
016-power-digit-sum/: Cargo.toml
017-number-letter-counts/: Cargo.toml
018-maximum-path-sum-1/: Cargo.toml
019-counting-sundays/: Cargo.toml
020-factorial-digit-sum/: Cargo.toml
020-factorial-digit-sum/src/: big_num.rs  main.rs
020-factorial-digit-sum/tests/: main.rs
020-factorial-digit-sum/tests/features/: pe020.feature
023-non-abundant-sums/: Cargo.toml
024-lexicographic-permutations/: Cargo.toml
025-one-thousand-digit-fibonacci-number/: Cargo.toml
026-reciprocal-cycles/: Cargo.toml
027-quadratic-primes/: Cargo.toml
028-number-spiral-diagonals/: Cargo.toml
029-distinct-powers/: Cargo.toml
030-digit-fifth-powers/: Cargo.toml
031-coin-sums/: Cargo.toml
032-pandigital-products/: Cargo.toml
033-digit-cancelling-fractions/: Cargo.toml
034-digit-factorials/: Cargo.toml
035-circular-primes/: Cargo.toml
036-double-base-palindromes/: Cargo.toml
037-truncatable-primes/: Cargo.toml
038-pandigital-multiples/: Cargo.toml
039-integer-right-triangles/: Cargo.toml
(+127 files in other folders)
