[package]
name = "factorial-digit-sum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cucumber = "0.19.1"

[[test]]
name = "main"
harness = false

[lib]
name = "big_num"
path = "src/lib.rs"
crate-type = ["lib"]
bench = false

[dependencies]
futures = "0.3.28"
